Update orders when processed
